// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`renders Empty without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby="_r_0_-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      open=""
    >
      <div
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-qtwduz"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <div
              class="rcx-box rcx-box--full rcx-modal__header-text rcx-css-trljwa rcx-css-lma364"
            >
              <h2
                class="rcx-box rcx-box--full rcx-modal__title"
                id="_r_0_-title"
              >
                Add people
              </h2>
            </div>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-r1bpeb"
          >
            <div
              class="rcx-box rcx-box--full rcx-field"
            >
              <span
                class="rcx-box rcx-box--full rcx-field__row"
              >
                <div
                  class="rcx-box rcx-box--full rcx-box--animated rcx-select"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-1sr8su7"
                  >
                    <div
                      class="rcx-box rcx-box--full rcx-css-w398ts"
                    >
                      <input
                        aria-describedby=""
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-invalid="false"
                        aria-label="Add people"
                        aria-labelledby="-label"
                        autocomplete="off"
                        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-pqpp8q"
                        id=""
                        placeholder="Choose users"
                        role="combobox"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
                    >
                      
                    </i>
                  </div>
                </div>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-field"
            >
              <span
                class="rcx-box rcx-box--full rcx-field__row rcx-css-2no6ie"
              >
                <label
                  class="rcx-box rcx-box--full rcx-check-box"
                >
                  <input
                    checked=""
                    class="rcx-box rcx-box--full rcx-check-box__input"
                    id="conference-add-participants-ring"
                    type="checkbox"
                  />
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-check-box__fake"
                  />
                </label>
                <label
                  class="rcx-box rcx-box--full rcx-css-1ik3wu8"
                  for="conference-add-participants-ring"
                >
                  Ring people
                </label>
              </span>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--secondary rcx-button"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button"
              disabled=""
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Add
              </span>
            </button>
          </div>
        </div>
      </div>
    </dialog>
  </div>
</body>
`;

exports[`renders NotRinging without crashing 1`] = `
<body>
  <div>
    <dialog
      aria-labelledby="_r_1_-title"
      aria-modal="true"
      class="rcx-box rcx-box--full rcx-modal"
      open=""
    >
      <div
        class="rcx-box rcx-box--full rcx-modal__inner rcx-css-qtwduz"
      >
        <header
          class="rcx-box rcx-box--full rcx-modal__header"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__header-inner"
          >
            <div
              class="rcx-box rcx-box--full rcx-modal__header-text rcx-css-trljwa rcx-css-lma364"
            >
              <h2
                class="rcx-box rcx-box--full rcx-modal__title"
                id="_r_1_-title"
              >
                Add people
              </h2>
            </div>
            <button
              aria-label="Close"
              class="rcx-box rcx-box--full rcx-button--small-square rcx-button--square rcx-button--icon rcx-button rcx-css-trljwa rcx-css-lma364"
              tabindex="-1"
              type="button"
            >
              <i
                aria-hidden="true"
                class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-4pvxx3"
              >
                
              </i>
            </button>
          </div>
        </header>
        <div
          class="rcx-box rcx-box--full rcx-modal__content rcx-css-1vw7itl"
        >
          <div
            class="rcx-box rcx-box--full rcx-modal__content-wrapper rcx-css-r1bpeb"
          >
            <div
              class="rcx-box rcx-box--full rcx-field"
            >
              <span
                class="rcx-box rcx-box--full rcx-field__row"
              >
                <div
                  class="rcx-box rcx-box--full rcx-box--animated rcx-select"
                >
                  <div
                    class="rcx-box rcx-box--full rcx-css-1sr8su7"
                  >
                    <div
                      class="rcx-box rcx-box--full rcx-css-w398ts"
                    >
                      <input
                        aria-describedby=""
                        aria-expanded="false"
                        aria-haspopup="listbox"
                        aria-invalid="false"
                        aria-label="Add people"
                        aria-labelledby="-label"
                        autocomplete="off"
                        class="rcx-box rcx-box--full rcx-box--animated rcx-input-box--undecorated rcx-input-box rcx-css-trljwa rcx-css-pqpp8q"
                        id=""
                        placeholder="Choose users"
                        role="combobox"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    class="rcx-box rcx-box--full rcx-select__addon rcx-css-x7bl3q rcx-css-1bprq55"
                  >
                    <i
                      aria-hidden="true"
                      class="rcx-box rcx-box--full rcx-icon--name-chevron-down rcx-icon rcx-css-4pvxx3"
                    >
                      
                    </i>
                  </div>
                </div>
              </span>
            </div>
            <div
              class="rcx-box rcx-box--full rcx-field"
            >
              <span
                class="rcx-box rcx-box--full rcx-field__row rcx-css-2no6ie"
              >
                <label
                  class="rcx-box rcx-box--full rcx-check-box"
                >
                  <input
                    checked=""
                    class="rcx-box rcx-box--full rcx-check-box__input"
                    id="conference-add-participants-ring"
                    type="checkbox"
                  />
                  <i
                    aria-hidden="true"
                    class="rcx-box rcx-box--full rcx-check-box__fake"
                  />
                </label>
                <label
                  class="rcx-box rcx-box--full rcx-css-1ik3wu8"
                  for="conference-add-participants-ring"
                >
                  Ring people
                </label>
              </span>
            </div>
          </div>
        </div>
        <div
          class="rcx-box rcx-box--full rcx-modal__footer rcx-css-17mu816"
        >
          <div
            class="rcx-button-group rcx-button-group--align-end"
            role="group"
          >
            <button
              class="rcx-box rcx-box--full rcx-button--secondary rcx-button"
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Cancel
              </span>
            </button>
            <button
              class="rcx-box rcx-box--full rcx-button"
              disabled=""
              type="button"
            >
              <span
                class="rcx-button--content"
              >
                Add
              </span>
            </button>
          </div>
        </div>
      </div>
    </dialog>
  </div>
</body>
`;
